# memorymaster

./: .dockerignore  .env.example  .gitignore  .gitleaks-reviewed-fingerprints  .mcp.json  .mcp.json.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPETITOR_ANALYSIS.md  CONTRIBUTING.md  CREDITS.md  DOCS-MAP.md  Dockerfile  GEMINI.md  INSTALLATION.md  LICENSE  README.md  ROADMAP-v3.2.md  ROADMAP.md  USER_GUIDE.md  autoresearch_results.jsonl  conftest.py  docker-compose.postgres.yml  docker-compose.yml  external-actions-required.md  extract_entities.py  extract_l2_refined.py  monitoring.md  omniclaude-coder-handoff.md  omniclaude-monitoring-prompt.md  pyproject.toml  pytest.ini  qdrant_sync_result.json  quality_model.pkl  refactor_main.py  roadmapres.md  test_output.txt
.claude/: _curation_log_2026-04-18.md
.codex/: config.toml
.gitnexus/: meta.json
.planning/: ATLAS-LLM-EXTRACTOR-SPEC.md  BASELINE-2026-06-09.html  FINAL-2026-06-20.html  LOCALFS-SPEC.md  MEMORYMASTER-DREAMING-V1.md  MEMORYMASTER-INGEST-INCIDENT-2026-07-16.md  ONBOARDING-SPEC.md  OPERATING-ENVELOPE-2026-07-11.md  P1-RELIABILITY-SPEC.md  P2-CENSUS.md  P3-INTAKE-POLICY-SPEC.md  PHASE0-RED-TEST-MATRIX.md  PROGRAM-LOG.md  R1.4-LEGACY-SENSITIVITY-INVENTORY.md  REMAINING-PHASES-V1-BUDGET.md  REMEDIATION-EXECUTION-V2.md  REMEDIATION-EXECUTION-V3-BUDGET.md  REMEDIATION-OPTIMIZATION-PLAN-2026-07-10.md  audit-remediation-ledger.md
artifacts/: 2026-07-01-fresh-eyes-gap-audit.html  audit-100-bm25off-2026-04-25.jsonl  audit-100-current-2026-04-25.jsonl  audit-100-rrf-2026-04-25.jsonl  audit-30-bm25-perfield-2026-04-25.jsonl  audit-30-bm25off-2026-04-25.jsonl  audit-30-current-2026-04-25.jsonl  audit-30-qe-2026-04-25.jsonl  audit-30-rrf-2026-04-25.jsonl  audit-30-scopeboost-2026-04-25.jsonl  audit-30-verbatim-2026-04-25.jsonl  audit-30-wlex01-2026-04-25.jsonl  bm25-per-field-eval-2026-04-23.md  bm25-per-field-eval-harness.py  bm25-sweep-2026-04-23.jsonl  bm25-sweep-2026-04-23.md  cognee-assessment-2026-04-24.md  cynical-deletion-audit-2026-04-27.md  entity-extraction-wave3-2026-04-23.md  entity-l2-backfill-2026-04-23.md  entity-new-kinds-2026-04-23.md  eval-expansion-2026-04-23.md  final-roadmap-2026-04-23.md  graph-distance-weight-eval-2026-04-25.md  graphify-queue-2026-04-24.md  haiku-l2-1000-2026-04-25.jsonl  harness-consolidation-2026-04-24.md  harness-consolidation-new-100-2026-04-24.jsonl  harness-consolidation-new-100-rrf-2026-04-24.jsonl  harness-consolidation-new-30-2026-04-24.jsonl  harness-consolidation-new-30-rrf-2026-04-24.jsonl  harness-fallout-audit-2026-04-25.md  longmemeval-2026-04-24.md  longmemeval-per-q-2026-04-24.md  longmemeval-rrf-2026-04-24.md  real-prompts-100-labels.json  real-prompts-100.jsonl  real-prompts-1000-labels-top50.json  real-prompts-1000-labels.json  real-prompts-1000.jsonl  (+38 more)
benchmark/: longmemeval_s_retrieval.json
benchmarks/: README.md  cases.jsonl  cases_adversarial.jsonl  cases_general.jsonl  longmemeval_runner.py  longmemeval_vector_runner.py  perf_smoke.py  slo_targets.json  thresholds.json
config-templates/: claude-md-append.md
debates/: index.json
docs/: AGENT-INSTALL.md  IMPROVEMENT_PLAN.md  INTEGRATING.md  MCP-TOOLS.md  README.md  ROADMAP.md  architecture.md  atlas-api-contract-v1.md  atlas-inbox-v1-technical-spec.md  cli-cookbook.md  compatibility.md  cookbook.md  cross-project-patterns.md  daydream-integration.md  deployment_profiles.md  enabling-v2-systems.md  env-reference.md  handbook.md  incident_drill_checklist.md  incident_drill_evidence_template.md  integration_playbooks.md  longmemeval-results.md  operations.md  recall-architecture-2026-04-23.md  retrieval-governance-upgrades-2026-06-24.md  security-audit-2026-05-11.md  security_supply_chain.md  storage-parity-divergence.md  storage-parity-report-2026-05-10.md  troubleshooting.md  v320-backlog.md
memorymaster/: __init__.py  __main__.py  _storage_lifecycle.py  _storage_read.py  _storage_schema.py  _storage_shared.py  _storage_sources.py  _storage_write_claims.py  access_control.py  action_exporters.py  action_extractor.py  atlas_claim_extractor.py  atlas_contract.py  auto_extractor.py  auto_resolver.py  candidate_dedupe.py  claim_edges.py  claim_verifier.py  cli.py  cli_handlers_basic.py  cli_handlers_curation.py  cli_handlers_integrity.py  cli_helpers.py  closets.py  config.py  conflict_resolver.py  context_hook.py  context_optimizer.py  contradiction_probe.py  daily_notes.py  dashboard.py  dashboard_auth.py  dashboard_integrity.py  db_merge.py  delta_sync.py  dream_bridge.py  embeddings.py  entity_extractor.py  entity_graph.py  entity_registry.py  (+73 more)
scripts/: FINISH_DB_SWAP.bat  RUNBOOK-wal-truncate.md  __init__.py  agent_session_end_ingest.py  agg_recall_latency.py  alert_operator_metrics.py  archive_watchkeeper_heartbeats.py  audit_dedupe_precision.py  autoresearch_daemon.py  backfill_entity_extraction.py  backfill_graph_store.py  backfill_stop_hook_citations.py  backtest_steward_classifier.py  bench_recall_latency.py  build_steward_training_set.py  check_hook_template_drift.py  claude_to_turns.py  codex_live_to_turns.py  compaction_edge_cases.py  compaction_trace_report.py  compaction_trace_validate.py  confusion_matrix_eval.py  conversation_importer.py  conversation_to_turns.py  e2e_operator.py  email_live_to_turns.py  eval_bm25_sweep.py  eval_classify_f1.py  eval_memorymaster.py  eval_recall_precision_at_5.py  eval_recall_quality.py  eval_steward_pareto.py  eval_verbatim_recall.py  evaluate_dreaming.py  expand_recall_eval.py  gen_env_reference.py  generate_drill_signoff.py  generate_release_truth.py  git_to_turns.py  github_live_to_turns.py  (+41 more)
tests/: bench_longmemeval.py  conftest.py  test_access_control.py  test_action_exporters.py  test_action_extractor.py  test_agent_contract_roundtrip.py  test_ambient_spool.py  test_architecture_budgets.py  test_archive_by_source.py  test_atlas_claim_extractor.py  test_atlas_contract.py  test_atlas_llm_extractor.py  test_atlas_mock_evidence_guard.py  test_atlas_persisted_envelope.py  test_atlas_source_schema.py  test_auto_extractor.py  (+340 more)
(+396 files in other folders)
