[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memorymaster"
version = "3.4.1"
description = "Production-grade memory reliability system for AI coding agents. Lifecycle-managed claims with citations, conflict detection, steward governance, and MCP integration."
license = {text = "MIT"}
authors = [{name = "wolverin0"}]
keywords = ["memory", "ai-agents", "claims", "lifecycle", "mcp", "sqlite", "postgres", "coding-agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
security = ["cryptography>=42"]
embeddings = ["sentence-transformers>=3.0"]
gemini = ["google-genai>=1.0"]
qdrant = ["httpx>=0.27"]
# `vector` enables the Qdrant vector-search recall fallback and the
# scripts/index_claims_to_qdrant.py indexer. Local-only (no network deps
# beyond Qdrant itself); sentence-transformers gives deterministic
# 384-dim embeddings on CPU.
vector = ["sentence-transformers>=3.0", "qdrant-client>=1.9"]
# `graph` enables the Kuzu-backed graph retrieval stream (roadmap 11.3,
# memorymaster.graph_store). Kuzu is an embedded, single-file graph
# database (no server) — lightweight enough to keep MemoryMaster's
# "single-file SQLite + optional Qdrant" story. Gated at runtime by
# MEMORYMASTER_RECALL_GRAPH=1; off by default.
graph = ["kuzu>=0.4"]
dev = ["pytest>=8.2", "pytest-cov>=6.0"]
mcp = ["mcp>=1.2"]
ml = ["scikit-learn>=1.3", "joblib>=1.3"]

[project.scripts]
memorymaster = "memorymaster.cli:main"
memorymaster-mcp = "memorymaster.mcp_server:main"
memorymaster-dashboard = "memorymaster.dashboard:main"
memorymaster-steward = "memorymaster.llm_steward:main"
memorymaster-setup = "memorymaster.setup_hooks:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
memorymaster = [
    "schema.sql",
    "schema_postgres.sql",
    "config_templates/*.md",
    "config_templates/hooks/*.py",
]
